<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dell.mediu.MyHealth">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Home"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageButton
            android:layout_width="50sp"
            android:layout_height="60sp"
            android:src="@drawable/ic_action_name"
            android:paddingStart="10sp"
            android:paddingLeft="10sp"
            android:paddingRight="0sp"
            android:paddingEnd="0sp"
            android:background="@android:color/white"
            android:gravity="center"
            android:onClick="home"/>
        <TextView
            android:id="@+id/myhealth"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:textColor="#000"
            android:text="@string/myhealth"
            android:textSize="28sp"
            android:paddingTop="5sp"
            android:layout_margin="5sp"
            />
        </LinearLayout>
    <TextView
        android:id="@+id/health"
        android:layout_width="match_parent"
        android:layout_height="210sp"
        android:background="@drawable/health"
        android:paddingStart="15sp"
        android:paddingLeft="15sp"
        android:paddingEnd="0sp"
        android:paddingRight="0sp"
        android:paddingTop="170sp"
        android:text="@string/myhealth"
        android:textSize="25sp"
        android:textStyle="bold"
        />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Home"
        android:layout_margin="10sp"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border2"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="5sp"
            android:layout_marginTop="15sp"
        >
        <TextView
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:textColor="#686d6a"
            android:text="@string/history"
            android:textSize="20sp"
            android:paddingLeft="15sp"
            android:paddingStart="15sp"
            android:paddingEnd="0sp"
            android:paddingRight="0sp"
            android:layout_margin="5sp"
            android:paddingTop="5sp"
            android:drawableRight="@drawable/ic_action_name2"
            android:drawableEnd="@drawable/ic_action_name2"
            android:background= "@drawable/selectors"
            android:onClick="history"
            android:clickable="true"
            />
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border2"
            android:layout_margin="5sp"
            >
        <TextView
            android:id="@+id/document"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:textColor="#686d6a"
            android:text="@string/documents"
            android:background="@drawable/selectors"
            android:textSize="20sp"
            android:paddingLeft="15sp"
            android:paddingStart="15sp"
            android:paddingEnd="0sp"
            android:paddingRight="0sp"
            android:layout_margin="5sp"
            android:paddingTop="5sp"
            android:onClick="documents"
            android:clickable="true"
            android:drawableRight="@drawable/ic_action_name2"
            android:drawableEnd="@drawable/ic_action_name2"
            />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border2"
            android:layout_margin="5sp"
            >
        <TextView
            android:id="@+id/lab"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:textColor="#686d6a"
            android:text="@string/lab"
            android:background="@drawable/selectors"
            android:textSize="20sp"
            android:paddingLeft="15sp"
            android:paddingStart="15sp"
            android:paddingEnd="0sp"
            android:paddingRight="0sp"
            android:layout_margin="5sp"
            android:paddingTop="5sp"
            android:onClick="labtest"
            android:clickable="true"
            android:drawableRight="@drawable/ic_action_name2"
            android:drawableEnd="@drawable/ic_action_name2"
            />

        </FrameLayout>
    </LinearLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
